[project]
name = "findmyza"
version = "0.1.0"
description = "Finds the best pizza places along a given route"
authors = [
    {name = "Mia Altieri",email = "mgaltier200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
pre-commit = "^4.3.0"
tox = "^4.31.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]  # errors, formatting, imports
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

